2003-09-09  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (new_chorus_voice_alternate) : Revert
	  surround chorus delay back to the value (0.002) used in v2.11.3.

2003-09-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.c:
	  Adjust minor of not Pythagoras tuning but both
	  mean-tone tuning and pure intonation by syntonic comma

2003-09-03  Takashi Iwai <tiwai@suse.de>

	* interface/alsaseq_c.c:
	  Fixed the compilation on ALSA 0.5.x environemnt.

2003-09-03  URABE Shyouhei <root@mput.dip.jp>

	* configure: autoreconf

2003-09-02  Takashi Iwai <tiwai@suse.de>

	* TiMidity.ad.in, TiMidity-uj.ad.in: Move.
	* interface/tkmidity.ptcl, interface/xaw_c.c, interface/xaw_i.c:
	  Bug fix.

2003-08-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c:
	  Little patch to avoid prototype mismatch

2003-08-27  mput <root@mput.dip.jp>

	* configure: autoreconfed

2003-08-27  Takashi Iwai <tiwai@suse.de>

	* interface/alsaseq_c.c, configure.in:
	  higher resolution of rendering in ALSA sequencer mode
	  with the event timestamps.  works only on the latest
	  ALSA 0.9.
	  works now also with the non-audio-device (e.g. wav).

2003-08-26  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c: clean up set_value().
	* interface/alsaseq_c.c: set the client name.

2003-08-25  mput <root@mput.dip.jp>

	* configure,timidity/Makefile.in: To fit with Iwai's changes

2003-08-25  Takashi Iwai <tiwai@suse.de>

	* configure.in, timidity/Makefile.am, timidity/output.c,
	  timidity/jack_a.c:
	  JACK output support (jackit.sf.net)
	  To enable JACK, you'll need pkgconfig installed.
	* timidity/timidity.c:
	  Fixed the path of libesd for AMD64 and PPC64 (/usr/lib64)
	* timidity/playmidi.c:
	  Added parentheses around the ambiguous conditions.

2003-08-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (parse_opt_s): -s option works correctly again

2003-08-19  TAMUKI Shoichi <tamuki@linet.gr.jp>
